factory-server-prod/factory-server-prod-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: factory-server-prod
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: factory-server-prod
  template:
    metadata:
      labels:
        app: factory-server-prod
    spec:
      containers:
      - image: ghcr.io/dysnomia-studio/factory-game-server:develop
        name: factory-server-prod
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 250m
            memory: 50Mi
          limits:
            cpu: 1000m
            memory: 500Mi
      imagePullSecrets:
      - name: github
